--- a/src/application/ElevatorFloorControl.fxml
+++ b/src/application/ElevatorFloorControl.fxml
@@ -2,17 +2,21 @@
 
 <?import java.lang.Integer?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="44.0" prefWidth="262.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="111.0" prefWidth="296.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ElevatorFloorController">
    <children>
-      <VBox prefHeight="92.0" prefWidth="259.0">
+      <VBox prefHeight="117.0" prefWidth="272.0">
          <children>
-            <Label text="How many floors does your elevator have?" />
+            <Label text="How many floors does your elevator have?">
+               <padding>
+                  <Insets bottom="3.0" left="6.0" top="3.0" />
+               </padding></Label>
             <HBox prefHeight="63.0" prefWidth="236.0">
                <children>
                   <ChoiceBox fx:id="floorsChoiceBox" prefWidth="150.0">
@@ -35,9 +39,21 @@
             				<Integer fx:value="15" />
             			</FXCollections>
             		</items>
+                     <padding>
+                        <Insets top="3.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets right="3.0" />
+                     </HBox.margin>
             	</ChoiceBox>
-                  <Button fx:id="createElevatorButton" mnemonicParsing="false" prefHeight="16.0" prefWidth="91.0" text="Proceed" />
+                  <Button fx:id="createElevatorButton" mnemonicParsing="false" onAction="#createElevator" prefHeight="16.0" prefWidth="91.0" text="Proceed">
+                     <HBox.margin>
+                        <Insets left="6.0" top="2.0" />
+                     </HBox.margin></Button>
                </children>
+               <VBox.margin>
+                  <Insets bottom="3.0" left="6.0" top="3.0" />
+               </VBox.margin>
             </HBox>
          </children>
       </VBox>
